implemented basic calendar view (no brushing & linking)
Implemented the basic calendar view that currently allows users to hover over the months and see which year they selected in the dropdown.
It is currently linked to the filter drop down menu in order to get the user selected year to show up in the header of the calendar.
(There isn't any brushing and linking done with the other visualizations in this implementation.)
@promiseadeliyi - please update the css for this as needed, thank you :D

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <h1 id="viz">Visualization</h1>
     
     <div class = "input-menus">
+      <!-- filter menu -->
       <div id="filterMenu">
         <p>Select Date & Line View:</p>
         <table>
@@ -70,6 +71,11 @@
             </span></td>
         </table>
       </div>
+
+      <!-- calendar -->
+      <div id="calendar"></div>
+
+      <!-- color lengend -->
       <div id="legend">
         <p>Legend</p>
         <svg id="my_legend" height=200 width=450></svg>
@@ -151,7 +157,8 @@
   <script src="lib/d3.v4/d3.v4.js"></script>
   <script src="js/legend.js"></script>
   <script src="js/visualization.js"></script>
-  <script src="js/dropdown.js"></script>
+  <script src="js/filter.js"></script>
+  <script src="js/cal.js"></script>
   
 </body>
 </html>
