added design sketches and task table

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   
   <!-- Title -->
-  <title>Project Team 4: Ridership vs Reliability, COSI 116A F24</title>
+  <title>Ridership vs Reliability Vizualization</title>
   
   <!-- CSS Styling -->
   <link rel="stylesheet" href="style.css">
@@ -90,8 +90,7 @@
 
       <!-- color lengend -->
       <div id="legend">
-        <p>Legend</p>
-        <svg id="my_legend" height=200 width=450></svg>
+        <svg id="my_legend" height=250 width=450></svg>
       </div>
     </div>
 
@@ -130,9 +129,17 @@
 
     <p><em>Expectation: Clearly describes domain tasks, processes, goals and abstract tasks for domain problems.</em></p>
 
+    <p><b>Here is our original task table after conducting user interviews: </b></p>
+    <img src="images/task_table.png">
     <h1 id = "design">Design Process</h1>
     
     <p><em>Sketches and design choices to justify final visualization.</em></p>
+    <div class = "sketches">
+      <img src="images/sketches.png">
+      <img src="images/promise_mbtamap.png">
+      <img src="images/promise_scatterplot.png">
+      <img src="images/gabe_plot_and_heatmap.png">
+    </div>
 
     <p><em>Expectation: Evidence of iterative improvement.
     Logical discussion of design choices grounded in theory from course.
