--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Change viewbox to whatever you want, e.g. "0 0 1000 6000" This determines your aspect ratio and coordinate system -->    
     <!-- Delete all the sample SVG code below after the viewbox to before the closing tag. Populate this part of the SVG with D3. -->
 
-        
+    <h3>Calendar Selection</h3>
     <div class = "input-menus">
       <!-- calendar -->
       <div id="calendar"></div>
