--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
     <p><em>List here where any code, packages/libraries, text, images, designs, etc. that you leverage come from.</em></p>
     <ul>
       <li>Canva</li>
+      <li>Figma</li>
       <li>Credits to <a href="http://www.d3noob.org"> d3noob</a> for clarifying d3 concepts and complexities </li>
     </ul>
     
