Created basic MBTA lines selection section
Users can now multi select the specific lines they wish to view
Or click on "All Lines" button to select all lines.
There is no brushing and linking included

--- a/index.html
+++ b/index.html
@@ -68,16 +68,8 @@
       <!-- calendar -->
       <div id="calendar"></div>
 
-      <!-- filter menu -->
-      <div id="filterMenu">
-        <p>Select Date & Line View:</p>
-        <table>
-            <td><span class="lineInput">
-              MBTA Color Line:
-              <select class="lineInput" name="lineInput"></select>
-            </span></td>
-        </table>
-      </div>
+      <!-- mbta filter -->
+      <div id="filterMenu"></div>
 
       <!-- color lengend -->
       <div id="legend">
