--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <ul>
       <li>Canva</li>
       <li>Figma</li>
+      <li><a href="https://benclinkinbeard.com/d3tips/building-a-calendar-with-d3/?utm_content=bufferc1664&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer">Building a calendar with D3</a> Tutorial</li>
       <li>Credits to <a href="http://www.d3noob.org"> d3noob</a> for clarifying d3 concepts and complexities </li>
     </ul>
     
