--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 
     <!-- Don't delete the closing tag! -->
     </svg>
+    <svg id="mbta-map">
+    </svg>
   </div>
   </div>
   
@@ -161,8 +163,10 @@
   
   <!-- Scripts at the end avoid need for dealing with async, defer, or onload event handlers -->
   <script src="lib/d3.v4/d3.v4.js"></script>
+  <script src="lib/d3-tube-map.js"></script>
   <script src="js/legend.js"></script>
   <script src="js/visualization.js"></script>
+  <script src="js/mbta-map.js"></script>
   <script src="js/filter.js"></script>
   <script src="js/cal.js"></script>
   
