Testing the lines for the map
The map works now i have to manually update the json file to get a kind of accurate map

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     <!-- Don't delete the closing tag! -->
     </svg>
     <svg id="mbta-map">
+
+
     </svg>
   </div>
   </div>
@@ -190,7 +192,7 @@
   
   <!-- Scripts at the end avoid need for dealing with async, defer, or onload event handlers -->
   <script src="lib/d3.v4/d3.v4.js"></script>
-  <script src="lib/d3-tube-map.js"></script>
+  <script src="lib/d3-tube-map/d3-tube-map.js"></script>
   <script src="js/legend.js"></script>
   <script src="js/scatterplot.js"></script>
   <script src="js/mbta-map.js"></script>
