coughing baby fixing everything

--- a/index.html
+++ b/index.html
@@ -77,15 +77,12 @@
       </div>
     </div>
 
-    <svg id="vis-svg">
+    <svg id="vis-svg"></svg>
 
     <!-- Don't delete the closing tag! -->
-    </svg>
     <svg id="mbta-map">
-
-
     </svg>
-  </div>
+    
   </div>
   
   <!-- Your writeup goes here -->
