fixed visual spacing

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
       </div>
     </div>
 
-    <svg id="vis-svg">
+    <div id="main-interactions">
+      <svg id="vis-svg">
 
-    <!-- Don't delete the closing tag! -->
-    </svg>
-    <svg id="mbta-map">
+      <!-- Don't delete the closing tag! -->
+      </svg>
+      <svg id="mbta-map"> </svg>
+    </div>
 
-
-    </svg>
   </div>
   </div>
   
