--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </div>
 
       <div class="section-cards">
-        <h1>Data Analysis</h1>
+        <h1 id = "data">Data Analysis</h1>
         <p><em>Summary of data, data types, and data preprocessing.</em></p>
 
         <p>Our data source consists of a spreadsheet, of which the following fields are utilized:</p>
@@ -140,7 +140,7 @@
       </div>
 
       <div class="section-cards">
-        <h1>Task Analysis</h1>
+        <h1 id="task">Task Analysis</h1>
 
         <p><em>Summary of task table.</em></p>
 
