added visualzation writeup and did a little tweak for on-demand scatterplot info

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
 
       <div class="section-cards">
           <h1 id = "viz_explanation">Visualization explanation</h1>
-        
+          <p>Our two main final visualizations are a scatterplot depicting the relationship between ridership and reliability and a map of the MBTA lines whose data we included. The user is able to use brushing to highlight individual points on the scatterplot, the purpose of this would be to highlight specific planar regions of the scatterplot in a collaborative or presentation context. The user can also acquire information on demand by hovering the mouse over individual moints on the scatteplot,  doing so provides the user with information about the line, ridership/reliability, and month of the data point. This aids the user in exploring the various data points. It is also possible for the user to filter by line by using the select lines option on the top right and select specific lines by year and month using the calendar. This allows the user to examine individual lines more effectively and examine the data from a temporal perspective.</p>
+
+          <p>The map of the lines aids the user in processing the information from a spatial perspective. Hovering the cursor over a givne line yields a tooltip with information about the average ridership/ and reliability for that line, providing a source of aggregative information. Clickng the a line highlights the corresponding points on the scatterplot, further aiding the user in integrating the statistical data with the geographical reality.</p>
         <p><em>Final visualization screenshots (PNG images), design justifications, UI walk-through, and linked presentation slides.</em></p>
       </div>
 
