--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       
       <div class="section-cards">
         <h1 id="motivation">Motivation</h1>
+        <p><em>Expectation: There is a clear focus, and a developed explanation of the problem, and a reasonable response is proposed.</em></p>
         <p>As residents of the greater Boston area, public transportation can be essential based on accessibility and how potentially convenient it can be. Therefore, one of the main features that users look for in the MBTA is reliability. Generally, public transportation can be seen as convient and cost effective yet short on aspects such as reliability.</p>
         <p>Based on this general sentiment, we are left asking: </p>
         <ul>
@@ -112,6 +113,8 @@
 
       <div class="section-cards">
         <h1 id = "data">Data Analysis</h1>
+        <p><em>Summary of data, data types, and data preprocessing.</em></p>
+
         <p>Our data source consists of a spreadsheet, of which the following fields are utilized:</p>
         <ul>
           <li><strong>year_month:</strong> reflects the year and month of the data entry</li>
@@ -138,6 +141,8 @@
 
       <div class="section-cards">
         <h1 id="task">Task Analysis</h1>
+
+        <p><em>Summary of task table.</em></p>
 
         <p>Our task definition for our project initially consisted of more concrete tasks that would naturally develop into the solution of our overarching goal. These tasks essentially aimed to determine the extent to which there was a relationship between reliability and ridership.</p>
 
@@ -187,6 +192,8 @@
 
       <div class="section-cards">
         <h1>Acknowledgments</h1>
+
+        <p><em>List here where any code, packages/libraries, text, images, designs, etc. that you leverage come from.</em></p>
         <ul>
           <li>Canva</li>
           <li>Figma</li>
