re-adding conclusion

--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
 
       <div class="section-cards">
         <h1 id = "conclusion">Conclusion</h1>
+        <p>In this project, we successfully collected data about reliability and ridership on different months for different MBTA lines andconstructed a website using HTML, css, and d3 that incorporated brushing and linking in order to represent that relationship which we found. We created and successfully linked together a calendar, a scatterplot, and a map of the MBTA rail system</p> 
+
+        <p>In the future, it could be useful to find data for and update our visualizations to reflect the relationship between ridership and reliability for individual stations, rather than for lines in aggregate. The higher level of granularity could potential review different relationships, but would at minimum result in more datapoints and a new perspective.  A smaller-scale change would be to include the option to show or hide the trend lines on the scatteplot, providing our users with the option for a less cluttered visualization. Another potential change to consider would be adding aggregate information on demand while using the brushing function. This would entail a pop-up with the average ridership/reliability for a given swath of highlighted points on the scatterplot.</p>
+
+        <p>Ultimately, I believe that our group succeeded in creating a visually stimulating and informative website. I believe that our level of interactivity is engaging and that our various visualizations allow users to inform themselves on the relationship between time period, line, ridership, and reliability.</p>
 
       </div>
 
