slightly changed nav bar for visibility and added back missing writeup sections

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="#motivation">Motivation</a></li>
           <li><a href="#viz">Visualization</a></li>
           <li><a href="#demo">Demo Video</a></li>
+          <li><a href="#viz-explain">Explanation</a></li>
           <li><a href="#data">Data Analysis</a></li>
           <li><a href="#task">Task Analysis</a></li>
           <li><a href="#design">Design Process</a></li>
@@ -105,8 +106,22 @@
       </div>
 
       <div class="section-cards">
-          <h1 id = "viz_explanation">Visualization explanation</h1>
+        <h1 id="viz-explain">Visualization explanation</h1>
         <p><em>Final visualization screenshots (PNG images), design justifications, UI walk-through.</em></p>
+        <p>Our two main final visualizations are a scatterplot depicting the relationship between ridership and reliability and a map of the MBTA lines whose data we included. The user is able to use brushing to highlight individual points on the scatterplot, the purpose of this would be to highlight specific planar regions of the scatterplot in a collaborative or presentation context. The user can also acquire information on demand by hovering the mouse over individual moints on the scatterplot,  doing so provides the user with information about the line, ridership/reliability, and month of the data point. This aids the user in exploring the various data points. It is also possible for the user to filter by line by using the select lines option on the top right and select specific lines by year and month using the calendar. This allows the user to examine individual lines more effectively and examine the data from a temporal perspective.</p>
+
+        <p>The map of the lines aids the user in processing the information from a spatial perspective. Hovering the cursor over a given line yields a tooltip with information about the average ridership/reliability for that line, providing a source of aggregative information. Clicking a line highlights the corresponding points on the scatterplot, further aiding the user in integrating the statistical data with the geographical reality.</p>
+
+        <div id="viz_screenshots">
+          <img src="images/final_viz.png">
+          <img src="images/zoom_in_filter.png">
+          <img src="images/zoom_in_scatterplot.png">
+          <img src="images/zoom_in_map.png">
+        </div>
+
+
+
+
 
       </div>
 
