--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <nav>
         <ul>
           <li><a href="#motivation">Motivation</a></li>
-          <li><a href="#viz">Visualization</a></li>
-          <li><a href="#demo">Demo Video</a></li>
+          <li><a href="#viz">Visualizations</a></li>
+          <li><a href="#demo">Demo</a></li>
           <li><a href="#viz-explain">Explanation</a></li>
-          <li><a href="#data">Data Analysis</a></li>
-          <li><a href="#task">Task Analysis</a></li>
-          <li><a href="#design">Design Process</a></li>
+          <li><a href="#data">Data</a></li>
+          <li><a href="#task">Tasks</a></li>
+          <li><a href="#design">Designs</a></li>
           <li><a href="#conclusion">Conclusion</a></li>
         </ul>
       </nav>
